infra/k8s/moderation.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation-api
          image: maxrngl121/ms-basic-example-moderation:2
