infra/k8s/posts.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts-api
          image: maxrngl121/ms-basic-example-posts:2
