infra/k8s/query.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query-api
          image: maxrngl121/ms-basic-example-query:2
